--- a/process.tex
+++ b/process.tex
@@ -12,7 +12,7 @@ The release process will be as follows:
 \end{itemize}
 %\item All releases will be clearly identified in Jira using the Jira \textbf{Fix In Version(s)} field.
 If this is not available, a \textit{Release Issue} will be created and all issues that are blocking the release will be related as blocker to it.
-\item Any extra releases, major, minor or patch, has to be requested by the release end users to the DM-CCB via RFC. The RFC shall contain:
+\item Any extra releases, major, minor or patch, has to be requested by the release end users to the DM-CCB via \gls{RFC}. The \gls{RFC} shall contain:
 \begin{itemize}
   \item reason an extra release
   \item list of features or fixes which are quested to be implemented in the release
@@ -50,24 +50,24 @@ The time needed to complete it depends on many factors:
 
 \begin{itemize}
 \item assessment and development time
-\item build, continuous integration (CI) and validation time
+\item build, continuous integration (\gls{CI}) and validation time
 \item communication delays
-\item CCB process time
+\item \gls{CCB} process time
 \end{itemize}
 
 This list is not complete. Other unexpected factors may enter in the loop.
 
-Defining a clear process, as done in this document, will help to reduce to the minimum the communication delays and CCB process time.
+Defining a clear process, as done in this document, will help to reduce to the minimum the communication delays and \gls{CCB} process time.
 
 Technical time, needed to assess and develop the solution, may be very difficult to reduce.
 
-Build, CI and validation time are depending from the infrastructure, architecture and tooling used.
+Build, \gls{CI} and validation time are depending from the infrastructure, architecture and tooling used.
 
 
 \subsection{Urgent Releases}
 
 In the case a very urgent release is required, that can't wait a formal approval of the DM-CCB (24 hours),
-a quick decision can be taken by the DMPM and a requested fix can be implemented and released immediately, if feasible.
+a quick decision can be taken by the \gls{DMPM} and a requested fix can be implemented and released immediately, if feasible.
 
-However, an RFC has to be filed a posteriori, and the DM-CCB is required to assess it.
+However, an \gls{RFC} has to be filed a posteriori, and the DM-CCB is required to assess it.
 
