--- a/requirements.tex
+++ b/requirements.tex
@@ -25,7 +25,7 @@ Release frequencies depend on the processing type:
 
 \begin{itemize}
 \item prompt processing must reposed quickly to issues, that could happen on a daily bases at least in the early days (official releases)
- or a  patch release  for a specific problem may be required during the night (this would require sign off from the AD for Science Operations).  .
+ or a  patch release  for a specific problem may be required during the night (this would require sign off from the \gls{AD} for Science Operations).  .
 \item \gls{DRP} processing  must be stable for long periods, currently processing is foreseen to take 9 months.  Before such a long processing run the release must be very well tested and any updates extremely well controlled.
 \item Image acquisition and header service, which form part of the image acquisition on the mountain will also need strict change control. Releases for this could be on monthly or even lounge timescales - however if there is a problem a patch will be needed immediately.
 \end{itemize}
