--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,7 @@
 \section{Introduction} \label{sec:intro}
 
-The current situation is  that
+The current situation is  that, only the Science Pipelines is released as follows:
+
 \begin{itemize}
 \item Stable releases every 6 months
 \item Weekly builds
