Added product tree

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -63,6 +63,7 @@ These processes will facilitate contrinutions from the science community and ens
 %definitions. This could be moved in the main part pf the document
 \include{definitions}
 
+\include{swptree}
 % Include all the relevant bib files.
 % https://lsst-texmf.lsst.io/lsstdoc.html#bibliographies
 \section{References} \label{sec:bib}
