--- a/definitions.tex
+++ b/definitions.tex
@@ -57,6 +57,8 @@ Test data should also not be included in a Software Product. However including s
 
 The content of this subsection is a \textit{prerequisite} for any release procedure to be applied.
 
+See in appendix \ref{sec:swptree} the proposed SW product tree for DM. So far, none of those proposed products, fits this definition.
+
 
 \subsection{Software Release} \label{sec:defrelease}
 
