--- a/swptree.tex
+++ b/swptree.tex
@@ -7,9 +7,6 @@ Full product tree is available in \citeds{LDM-294}.
 
 At May 2019, this list is still a proposal and none of the software products included here are correctly defined.
 
-The \textit{Science Pipelines Distribution} is included in the list, since it is the only DM product that is currently released.
-However this is not reallya Software Product but a distribution.
-It includes all Science Pipelines Software Products, test data, development and build tools, and everything that is required by the Science Collaborators to contribute to the project.
 
 
 \begin{figure}
@@ -22,3 +19,6 @@ It includes all Science Pipelines Software Products, test data, development and 
 \end{center}
 \end{figure}
 
+The \textit{Science Pipelines Distribution} is included in the list since it is the only DM product that is currently released.
+However this is not really a Software Product but a distribution.
+It includes all Science Pipelines Software Products, test data, development and build tools, and everything that is required by the Science Collaborators to contribute to the project.
