Fixes and KT contributions

--- a/definitions.tex
+++ b/definitions.tex
@@ -2,6 +2,9 @@
 
 The following definitions should to be taken in account when defining or working with the release process.
 
+These are technical details that belong more to the implementation of the procedure.
+However it is worth having them mentioned here as a reference.
+
 
 \subsection{Environment} \label{sec:envdef}
 
@@ -57,7 +60,7 @@ Test data should also not be included in a Software Product. However including s
 
 The content of this subsection is a \textit{prerequisite} for any release procedure to be applied.
 
-See in appendix \ref{sec:swptree} the proposed SW product tree for DM. So far, none of those proposed products, fits this definition.
+See in appendix \ref{sec:swptree} the proposed \gls{SW} product tree for \gls{DM}. So far, none of those proposed products, fits this definition.
 
 
 \subsection{Software Release} \label{sec:defrelease}
