--- a/requirements.tex
+++ b/requirements.tex
@@ -3,6 +3,8 @@
 Software products in \gls{LSST} Data Management has different stakeholders, that may have different requirements in terms of release.
 In this section we try to give an overview of the release requirements for each of them.
 
+To be kept in mind that the content of a release, must be well understood and documented in the corresponding release note.
+
 
 \subsection{Release Requirements for Science Community } \label{sec:comreqs}
 
@@ -38,15 +40,13 @@ and on the urgency of the problems to be fixed.
 
 \subsection{Release Requirements for Infrastructural Software} \label{sec:infreqs}
 
-A subset of \gls{DM} software products will not be used for data processing,
-nor will be available to the community for further investigation and contribution to the \gls{LSST} science.
-One example if the software required to implement the \gls{LSP}.
+A significant subset of DM software products are used to provide services to LSST science users and staff but are not directly used to generate LSST science data products. An example of this is the software that implements the LSST Science Platform (LSP).
 
-The releases in this cases are oriented to have a stable infrastructure.
-The release cadence is n principle not tight to processing milestones,
-except in case of new functionality to be provided in a planned manner.
+Releases of this type of software are typically on their own cadence and need to be adequately tested before deployment to ensure a stable infrastructure. The releases may be tied to processing milestones if the services or features thereof are required for the processing (e.g. functionality of the workflow service may be required for Data Release processing and features in the LSP may be needed for QA of data products).
 
-Patch releases need to be provided depending on the severity of the problems to be fixed.
+Patch releases may need to be provided depending on the urgency and severity of the problems to be fixed.
+
+
 
 
 \subsection{Other Release Requirements} \label{sec:otherreqs}
