--- a/swptree.tex
+++ b/swptree.tex
@@ -5,7 +5,7 @@ Follows the \gls{DM} software product tree, listing all operational \gls{DM} sof
 
 Full product tree is available in \citeds{LDM-294}.
 
-At May 2019, this list is still a proposal and none of the software products included here are correctly defined.
+At May 2019, this list is still a proposal and none of the software products included here are correctly defined as per definition in \ref{sec:swdef}.
 
 
 
@@ -19,6 +19,6 @@ At May 2019, this list is still a proposal and none of the software products inc
 \end{center}
 \end{figure}
 
-The \textit{Science Pipelines Distribution} is included in the list since it is the only DM product that is currently released.
+The \textit{Science Pipelines Distribution} is included in the list since it is the only \gls{DM} product that is currently released.
 However this is not really a Software Product but a distribution.
 It includes all Science Pipelines Software Products, test data, development and build tools, and everything that is required by the Science Collaborators to contribute to the project.
