--- a/definitions.tex
+++ b/definitions.tex
@@ -1,9 +1,8 @@
 \section{Definitions} \label{sec:defs}
 
-The following definitions should to be taken in account when defining or working with the release process.
-
-These are technical details that belong more to the implementation of the procedure.
-However it is worth having them mentioned here as a reference.
+The following definitions should be taken into account when defining or working with the release process.
+These are technical details that belong more to the implementation of the procedure,
+however it is worth mentioning them here as a reference.
 
 
 \subsection{Environment} \label{sec:envdef}
