--- a/swptree.tex
+++ b/swptree.tex
@@ -1,11 +1,10 @@
 \newpage
 \section{DM Software Product Tree}\label{sec:swptree}
 
-Follows the \gls{DM} software product tree, listing all operational \gls{DM} software products.
+This section presents the \gls{DM} software product tree, listing all operational \gls{DM} software products.
+The full product tree is available in \citeds{LDM-294}.
 
-Full product tree is available in \citeds{LDM-294}.
-
-At May 2019, this list is still a proposal and none of the software products included here are correctly defined as per definition in \ref{sec:swdef}.
+As of May 2019, this list is still a proposal and none of the software products included here are correctly defined as per the definition in \ref{sec:swdef}.
 
 
 
@@ -20,5 +19,5 @@ At May 2019, this list is still a proposal and none of the software products inc
 \end{figure}
 
 The \textit{Science Pipelines Distribution} is included in the list since it is the only \gls{DM} product that is currently released.
-However this is not really a Software Product but a distribution.
-It includes all Science Pipelines Software Products, test data, development and build tools, and everything that is required by the Science Collaborators to contribute to the project.
+However this is not strictly speacking a Software Product but a distribution.
+It includes all Science Pipelines Software Products, test data, development and build tools, and everything else that is required by LSST users to do science with the LSST data products.
