updated community section and abstract

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -11,14 +11,14 @@
 
 % To add a short-form title:
 % \title[Short title]{Title}
-\title{LSST Software Release Management}
+\title{LSST Software Release Management Policy}
 
 % Optional subtitle
 % \setDocSubtitle{A subtitle}
 
 \author{%
-Leanne P. Guy, Gabriele Comoretto
-}
+Leanne Guy, Gabriele Comoretto
+}	
 
 \setDocRef{LDM-672}
 
@@ -28,10 +28,9 @@ Leanne P. Guy, Gabriele Comoretto
 \setDocCurator{Leanne Guy}
 
 \setDocAbstract{%
-
-This document describes the processes that \gls{LSST} Data Management will adopt for managing
-DM Software Products release in order to meet the current and future needs of the \gls{LSST} science program.
-These processes will facilitate contrinutions from the science community and ensure proper \gls{LSST} \gls{DM} operations.
+This document outlines the \gls{LSST} \gls{DM} policy for managing \gls{DM} Software Product releases. 
+The policy takes into account requirements from users of \gls{DM} software products, both from within the \gls{LSST} project, and from the LSST science community. 
+Technical implementation details for release management are covered in \citeds{DMTN-106}. 
 }
 
 % Change history defined here.
@@ -39,8 +38,9 @@ These processes will facilitate contrinutions from the science community and ens
 % Fields: VERSION, DATE, DESCRIPTION, OWNER NAME.
 % See LPM-51 for version number policy.`
 \setDocChangeRecord{%
-  \addtohist{}{2019-04-22}{Definitions and Requirements}{G. Comoretto}
-  \addtohist{}{2018-12-03}{First draft}{Leanne P. Guy, G. Comoretto}
+  \addtohist{}{2019-05-07}{Updated community requirements, abstractt}{L.~Guy}
+  \addtohist{}{2019-04-22}{Definitions and Requirements}{G.~ Comoretto}
+  \addtohist{}{2018-12-03}{First draft}{L.~Guy, G.~Comoretto}
 }
 
 \begin{document}
