--- a/requirements.tex
+++ b/requirements.tex
@@ -44,14 +44,14 @@ and on the urgency of the problems to be fixed.
 
 \subsection{Release Requirements for \gls{LSST} Subsystems in Operations.} \label{sec:otherreqs}
 
-Other \gls{LSST} subsystem may be consumers of \gls{DM} software products, for example the \gls{TS} subsystem software makes use of the \gls{DM} software products to run  \gls{TS} software. 
+Other \gls{LSST} subsystem may be consumers of \gls{DM} software products, for example the Telescope \& Site subsystem software makes use of the \gls{DM} software products to run  \gls{TS} software. 
 In order for \gls{DM} to be able to respond correctly to the needs of other \gls{LSST} subsystems, it is important to first identify which \gls{DM} Software Products are used, and how they are used.
 
 \subsection{Release Requirements for Infrastructural Software} \label{sec:infreqs}
 
-A significant subset of DM software products are used to provide services to LSST science users and staff but are not directly used to generate LSST science data products. An example of this is the software that implements the LSST Science Platform (LSP).
+A significant subset of \gls{DM} software products are used to provide services to \gls{LSST} science users and staff but are not directly used to generate \gls{LSST} science data products. An example of this is the software that implements the \gls{LSST} Science Platform (\gls{LSP}).
 
-Releases of this type of software are typically on their own cadence and need to be adequately tested before deployment to ensure a stable infrastructure. The releases may be tied to processing milestones if the services or features thereof are required for the processing (e.g. functionality of the workflow service may be required for Data Release processing and features in the LSP may be needed for QA of data products).
+Releases of this type of software are typically on their own cadence and need to be adequately tested before deployment to ensure a stable infrastructure. The releases may be tied to processing milestones if the services or features thereof are required for the processing (e.g. functionality of the workflow service may be required for Data Release processing and features in the \gls{LSP} may be needed for \gls{QA} of data products).
 
 Patch releases may need to be provided depending on the urgency and severity of the problems to be fixed.
 
