--- a/swptree.tex
+++ b/swptree.tex
@@ -20,4 +20,4 @@ As of May 2019, this list is still a proposal and none of the software products 
 
 The \textit{Science Pipelines Distribution} is included in the list since it is the only \gls{DM} product that is currently released.
 However this is not strictly speacking a Software Product but a distribution.
-It includes all Science Pipelines Software Products, test data, development and build tools, and everything else that is required by LSST users to do science with the LSST data products.
+It includes all Science Pipelines Software Products, test data, development and build tools, and everything else that is required by \gls{LSST} users to do science with the \gls{LSST} data products.
