Removing unnecessary capital words

--- a/requirements.tex
+++ b/requirements.tex
@@ -45,7 +45,7 @@ and on the urgency of the problems to be fixed.
 \subsection{Release Requirements for \gls{LSST} Subsystems in Operations.} \label{sec:otherreqs}
 
 Other \gls{LSST} subsystem may be consumers of \gls{DM} software products, for example the Telescope \& Site subsystem software makes use of the \gls{DM} software products to run  \gls{TS} software. 
-In order for \gls{DM} to be able to respond correctly to the needs of other \gls{LSST} subsystems, it is important to first identify which \gls{DM} Software Products are used, and how they are used.
+In order for \gls{DM} to be able to respond correctly to the needs of other \gls{LSST} subsystems, it is important to first identify which \gls{DM} software products are used, and how they are used.
 
 \subsection{Release Requirements for Infrastructural Software} \label{sec:infreqs}
 
