--- a/swptree.tex
+++ b/swptree.tex
@@ -12,12 +12,12 @@ As of May 2019, this list is still a proposal and none of the software products 
 \begin{center}
  \includegraphics[width=1.1\textwidth]{ProductTreeLand}
 
- \caption{The \gls{DM} Software product tree.}
+ \caption{The \gls{DM} software product tree.}
  \label{fig:doctree}
 
 \end{center}
 \end{figure}
 
 The \textit{Science Pipelines Distribution} is included in the list since it is the only \gls{DM} product that is currently released.
-However this is not strictly speacking a Software Product but a distribution.
-It includes all Science Pipelines Software Products, test data, development and build tools, and everything else that is required by \gls{LSST} users to do science with the \gls{LSST} data products.
+However this is not strictly speacking a software product but a distribution.
+It includes all Science Pipelines software products, test data, development and build tools, and everything else that is required by \gls{LSST} users to do science with the \gls{LSST} data products.
