--- a/definitions.tex
+++ b/definitions.tex
@@ -19,12 +19,12 @@ An environment is usually needed in the following contexts:
 
 These are the most common uses of an environment. Additional scenarios can be identified depending on the needs.
 
-In some cases, for simplicity, the same environment is used in development, tests and operations, but this does not justify the inclusion of the environment definition in the Software Product itself.
+In some cases, for simplicity, the same environment is used in development, tests and operations, but this does not justify the inclusion of the environment definition in the software product itself.
 
 
 \subsection{Software Product} \label{sec:swdef}
 
-A Software Product is a component of the subsystem (\gls{DM}) product tree.
+A software product is a component of the subsystem (\gls{DM}) product tree.
 
 The following activities are done on a \gls{SW} Product:
 \begin{itemize}
@@ -32,30 +32,30 @@ The following activities are done on a \gls{SW} Product:
 \item test activities, usually unit tests and system test
 \item release activities
 \item packaging activities
-\item operational activities, in stand alone mode, in an operational pipeline or as part of a service. Some \gls{SW} Products are libraries, therefore are not operationally, but used as dependencies by other Software Products.
+\item operational activities, in stand alone mode, in an operational pipeline or as part of a service. Some \gls{SW} Products are libraries, therefore are not operationally, but used as dependencies by other software products.
 \end{itemize}
 
-A Software Product shall correspond to a single repository.
-In other  words, there shall be a correspondence \textit{1:1} between Software Products and git packages.
-All the Software Product's dependencies are different Software Products and therefore released separately.
+A software product shall correspond to a single repository.
+In other  words, there shall be a correspondence \textit{1:1} between software products and Git packages.
+All the software product's dependencies are different software products and therefore released separately.
 
-This is not the case of \gls{DM}, where a Software Product is comprised of multiple git packages.
-The compromised solution in this case is to have a GitHub \textit{metapackage} that identifies the Software Product.
-All git packages composing the Software Product are dependencies in a GitHub \textit{metapackage} and released at the same time.
-In this case, a git package shall be related only to one Software Product, and it is not by himself a Software Product.
-In other words, there is a correspondence \textit{1:many} between Software Product and Git packages.
+This is not the case of \gls{DM}, where a software product is comprised of multiple Git packages.
+The compromised solution in this case is to have a GitHub \textit{metapackage} that identifies the software product.
+All Git packages composing the software product are dependencies in a GitHub \textit{metapackage} and released at the same time.
+In this case, a Git package shall be related only to one software product, and it is not by himself a software product.
+In other words, there is a correspondence \textit{1:many} between software product and Git packages.
 There shall never be a \textit{many:many} correspondence.
 
-The following elements should not be part of a Software Product:
+The following elements should not be part of a software product:
 
 \begin{itemize}
 \item build tools, otherwise we will have build tools deployed in operations.
-\item environment definition, since the environment depends on the final instantiation of the Software Product that are not visible in the development phase.
+\item environment definition, since the environment depends on the final instantiation of the software product that are not visible in the development phase.
 \end{itemize}
 
 These elements shall follow a parallel development / release process.
 
-Test data should also not be included in a Software Product. However including small datasets for enabling the unit tests is not a bad practice.
+Test data should also not be included in a software product. However including small datasets for enabling the unit tests is not a bad practice.
 
 The content of this subsection is a \textit{prerequisite} for any release procedure to be applied.
 
@@ -70,7 +70,7 @@ The identifier is usually of the form \texttt{M.n.p}.
 The tag in the Github repository and the software release note shall be sufficient to identify the release, and therefore for a developer
 to resolve the dependencies, build the binaries and execute the software.
 
-The software release is a monolithic snapshot of the Software Product to be used as is, or in its corresponding binary package(s), by the downstream processes or users.
+The software release is a monolithic snapshot of the software product to be used as is, or in its corresponding binary package(s), by the downstream processes or users.
 In theory, it should be possible to identify the release with a checksum calculated automatically on the delivered package.
 That checksum can be used to identify the release installed in an environment, or included in a distribution.
 
