--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -33,6 +33,7 @@ The policy takes into account requirements from users of \gls{DM} software produ
 Technical implementation details for release management are covered in \citeds{DMTN-106}. 
 }
 
+
 % Change history defined here.
 % Order: oldest first.
 % Fields: VERSION, DATE, DESCRIPTION, OWNER NAME.
@@ -67,7 +68,7 @@ Technical implementation details for release management are covered in \citeds{D
 % Include all the relevant bib files.
 % https://lsst-texmf.lsst.io/lsstdoc.html#bibliographies
 \section{References} \label{sec:bib}
-\bibliography{lsst,lsst-dm,refs_ads,refs,books}
+\bibliography{lsst,lsst-dm,refs_ads,refs,books,local}
 
 %Make sure lsst-texmf/bin/generateAcronyms.py is in your path
 \printglossaries
